{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 398,
  "lineage": "6577ecb3-fe69-1f9c-ea89-a2256a702130",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:internet-gateway/igw-03f7d6b49395703ea",
            "id": "igw-03f7d6b49395703ea",
            "owner_id": "779252038969",
            "tags": {
              "Name": "production-IGW"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03f7d6b49395703ea",
            "id": "r-rtb-0bc52a9f6d2cb929c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc52a9f6d2cb929c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-088a108fd80c33bc3",
            "owner_id": "779252038969",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Names": "private-route-table"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc52a9f6d2cb929c",
            "owner_id": "779252038969",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f7d6b49395703ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Names": "public-route-table"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b45d763052ba5f9",
            "route_table_id": "rtb-088a108fd80c33bc3",
            "subnet_id": "subnet-0e274fa5637fe26cd"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.pvsn_1",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04750e256bc18a18e",
            "route_table_id": "rtb-088a108fd80c33bc3",
            "subnet_id": "subnet-0fde965b497796cf0"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.pvsn_2",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc99d9994fa3a02",
            "route_table_id": "rtb-088a108fd80c33bc3",
            "subnet_id": "subnet-0a21cd99252c12fb7"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.pvsn_3",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01929cba93b11a259",
            "route_table_id": "rtb-0bc52a9f6d2cb929c",
            "subnet_id": "subnet-0e43aa786ab1a6d21"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.pbsn_1",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024637880fadff4bb",
            "route_table_id": "rtb-0bc52a9f6d2cb929c",
            "subnet_id": "subnet-07f264bd1e815c558"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.pbsn_2",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be6646a2824518ae",
            "route_table_id": "rtb-0bc52a9f6d2cb929c",
            "subnet_id": "subnet-0c12468c6e33d8ef4"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.pbsn_3",
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:security-group/sg-0d8c5ad05911fc73a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8c5ad05911fc73a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EC2-security-group",
            "name_prefix": "",
            "owner_id": "779252038969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pbsn_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:subnet/subnet-0e43aa786ab1a6d21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0e43aa786ab1a6d21",
            "map_public_ip_on_launch": false,
            "owner_id": "779252038969",
            "tags": {
              "Name": "Public-subnet-1"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pbsn_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:subnet/subnet-07f264bd1e815c558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-07f264bd1e815c558",
            "map_public_ip_on_launch": false,
            "owner_id": "779252038969",
            "tags": {
              "Name": "Public-subnet-2"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pbsn_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:subnet/subnet-0c12468c6e33d8ef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0c12468c6e33d8ef4",
            "map_public_ip_on_launch": false,
            "owner_id": "779252038969",
            "tags": {
              "Name": "Public-subnet-3"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvsn_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:subnet/subnet-0e274fa5637fe26cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.96.0/19",
            "id": "subnet-0e274fa5637fe26cd",
            "map_public_ip_on_launch": false,
            "owner_id": "779252038969",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvsn_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:subnet/subnet-0fde965b497796cf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0fde965b497796cf0",
            "map_public_ip_on_launch": false,
            "owner_id": "779252038969",
            "tags": {
              "Name": "Private-subnet-2"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvsn_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:subnet/subnet-0a21cd99252c12fb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-0a21cd99252c12fb7",
            "map_public_ip_on_launch": false,
            "owner_id": "779252038969",
            "tags": {
              "Name": "Private-subnet-3"
            },
            "vpc_id": "vpc-09ff9111b64487152"
          },
          "dependencies": [
            "aws_vpc.vpc_design"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_design",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:779252038969:vpc/vpc-09ff9111b64487152",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0569c5dfdd5a5b151",
            "default_route_table_id": "rtb-07546dc33ebe8910b",
            "default_security_group_id": "sg-07148e78340aae8af",
            "dhcp_options_id": "dopt-3600835d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09ff9111b64487152",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07546dc33ebe8910b",
            "owner_id": "779252038969",
            "tags": {
              "Name": "Productionvpc"
            }
          }
        }
      ]
    }
  ]
}